runtime/localstack-package/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/localstack-package-host: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 8080
            - containerPort: 4566
            - containerPort: 31566
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/sites-enabled/nginx-localstack.conf
              name: nginx-claim0
              readOnly: true
            - mountPath: /etc/nginx/certs
              name: nginx-claim1
      hostname: localhost.localstack.cloud
      restartPolicy: Always
      volumes:
        - name: nginx-claim0
          persistentVolumeClaim:
            claimName: nginx-claim0
            readOnly: true
        - name: nginx-claim1
          persistentVolumeClaim:
            claimName: nginx-claim1
status: {}
