runtime/localstack-package/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "4566"
      port: 4566
      targetPort: 4566
    - name: "31566"
      port: 31566
      targetPort: 31566
    - name: 4566-tcp
      port: 4566
      targetPort: 4566
    - name: 31566-tcp
      port: 31566
      targetPort: 31566
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
