runtime/localstack-package/tflocal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: tflocal
  name: tflocal
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: tflocal
status:
  loadBalancer: {}
