runtime/localstack-package/localstack-package-host-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: localstack-package-host
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/localstack-package-host: "true"
  podSelector:
    matchLabels:
      io.kompose.network/localstack-package-host: "true"
